# cubeglobe-bot

./: .gitmodules  Cargo.toml  LICENSE  README.md  example.config.toml
src/: main.rs
