[package]
name = "cubeglobe-bot"
version = "0.1.1"
authors = ["D Anzorge <d.anzorge@gmail.com>"]

[features]
sdlbundled = [ "cubeglobe/bundled" ]

[dependencies]
cubeglobe = { path = "./cubeglobe" }
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"
image = "0.20.1"
failure = "0.1.3"
failure_derive = "0.1.3"
chrono = { version = "0.4.6", features = [ "serde" ] }
rand = "0.5.5"
elefren = { git = "https://github.com/DeeUnderscore/elefren.git", branch = "media-builder" } # ⚠ flakiness alert!
oxipng = "2.1.8"
