[package]
name = "cubeglobe-bot"
version = "0.1.1"
authors = ["D Anzorge <d.anzorge@gmail.com>"]
edition = "2015"

[features]
sdlbundled = [ "cubeglobe/bundled" ]

[dependencies]
cubeglobe = { path = "./cubeglobe" }
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"
image = "0.20.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.6", features = [ "serde" ] }
rand = "0.5.5"
elefren = { git = "https://github.com/DeeUnderscore/elefren.git", branch = "media-builder" } # ⚠ flakiness alert!
oxipng = "2.1.8"
